examples/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kustomize-demo
spec:
  type: LoadBalancer
